test/pass/atom_int.j
class A {
    Void main() { return i + i + 5; }
}
