test/fail/parsing_error_type_decl_uppercase.j
class A {
  Void main() {
      Int Asd;
      return 1;
  }
}
